# Events-Manager

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
data/: EventList.csv  EventList.html  Events.txt
domain/: Action.cpp  Action.h  Event.cpp  Event.h
eventlist/: CsvEventList.cpp  CsvEventList.h  FileEventList.cpp  FileEventList.h  HtmlEventList.cpp  HtmlEventList.h
exceptions/: Exceptions.cpp  Exceptions.h
repository/: FileRepository.cpp  FileRepository.h  Repository.cpp  Repository.h  UserRepository.cpp  UserRepository.h
service/: Service.cpp  Service.h
table/: AttendedEventsTableModel.cpp  AttendedEventsTableModel.h  AttendedTableDialog.cpp  AttendedTableDialog.h
ui/: UI.cpp  UI.h
utils/: Utils.cpp  Utils.h
validator/: EventValidator.cpp  EventValidator.h
widgets/: BarChartWidget.cpp  BarChartWidget.h
